[package]
name = "rrustdoc"
version = "0.1.0"
edition = "2021"
description = "A rustdoc wrapper for rustdoc devs"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
open = "5.0.0"
owo-colors = "4.0.0-rc.1"
ra-ap-rustc_lexer = "0.34.0"
rustc-hash = "1.1.0"
smallvec = { version = "1.13.1", features = ["const_generics"] }

[profile.release]
lto = true
